--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "expect-webdriverio": "^3.1.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.15.4",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.4",
+    "@babel/register": "^7.15.3",
     "@wdio/local-runner": "^7.10.1",
     "@wdio/mocha-framework": "^7.11.0",
     "@wdio/spec-reporter": "^7.10.1",
